# AISchool-django

./: .gitignore  README.md  lol.json  pyproject.toml  r.txt
api/admin/: __init__.py  country.py  lesson.py  manual.py  person.py  school.py  subject.py  user.py
api/migrations/: 0001_initial.py  0002_remove_school_photos_alter_user_avatar_and_more.py  0003_student_is_manager.py  0004_remove_school_manager_school_emails_school_managers_and_more.py  0005_remove_school_managers_teacher_is_manager_and_more.py  0006_teacher_is_elementry_teacher_teacher_is_head_teacher.py  0007_rename_is_elementry_teacher_teacher_is_elementary_teacher.py  0008_remove_school_director_school_head_master.py  0009_remove_school_head_master_and_more.py  0010_remove_subject_image_alter_klass_form_and_more.py  0011_country_alter_subject_options_remove_school_country_and_more.py  0012_school_country.py  0013_city_remove_school_city_remove_school_country_and_more.py  0014_remove_school_profiles_country_school_profiles_and_more.py  0015_alter_position_options_alter_subject_options_and_more.py  0016_alter_subjectname_options_remove_subjectname_country_and_more.py  0017_alter_subject_options_alter_subjectname_options_and_more.py  0018_alter_subject_options_rename_name1_subject_name_and_more.py  0019_rename_form_klass_grade.py  0020_module_order_task_order_theory_order_topic_order_and_more.py  (+32 more)
auth/: admin.py  forms.py  models.py  responses.py  serializers.py  urls.py  views.py
core/: admin_ordering.py  settings.py  urls.py
utils/: parsers.py  pdf_middleware.py  renderers.py  transformers.py
(+295 files in other folders)
